# web_auto_tool_test

./: CLAUDE.md  README.md  interaction.py  main.py  pyproject.toml
src/: instruction.py  llm_client.py  mcp_client.py  message_system.py  resource_manager.py  task_orchestrator.py
src/orchestrator/: __init__.py  base_orchestrator.py  interactive_orchestrator.py  task_orchestrator.py
