[project]
name = "mcp-task-orchestrator"
version = "0.1.0"
description = "MCP-powered task orchestrator using Google Search and Playwright with OpenAI API"
authors = [
    {name = "MCP Orchestrator Team"}
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "fastmcp>=2.0.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]